# fastapi-playground

apiroute/: app.py  feature_0_137_0.py
apiroute/e2e/: .gitignore
book-app/: flake.nix
book-app/api/: Makefile  README.md  compose.yaml  hello.py  pyproject.toml
book-app/api/environments/db/init/: create_tables.sql
book-app/api/src/books_api/: config.py
book-app/api/src/books_api/domain/: books.py  isbn.py
book-app/api/src/books_api/driver/: database.py
book-app/api/src/books_api/gateway/: __init__.py  fetch_books.py  store_book.py
book-app/api/src/books_api/port/: fetch_books.py  store_book_port.py
book-app/api/src/books_api/rest/: app.py  presentations.py
book-app/api/src/books_api/use_case/: create_book.py  list_books.py
book-app/api/tests/gateway/: test_fetch_books.py
book-app/api/tests/rest/: test_presentations.py
book-app/api/tests/use_case/: test_list_books.py
book-app/e2e/: .gitignore  README.md  requirements.txt
book-app/ninja-version/: compose.yaml  main.py  pyproject.toml
book-app/playtest2_pkg/: pyproject.toml
depends/: first_steps.py
logging/: app.py  log_config.yaml  requirements.txt
logging/error/: app.py  (+1 more)
opentelemetry/: Gemfile  app.py  async_client.py  client.py  client.rb
starlette-GHSA-86qp-5c8j-p5mr/: pyproject.toml  run_fastapi_app.py  run_starlette_app.py
starlette-GHSA-x746-7m8f-x49c/: pyproject.toml  run_fastapi_app.py
starlette-cve-2026-48710-badhost/: pyproject.toml  run_fastapi_app.py  run_starlette_app.py
tiangolo-2025-talk/: call_github.py  main.py  pyproject.toml
wsgi-app/: app.py
(+32 files in other folders)
